--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cv
 description: Content Values map helpers
-version: 0.1.0
+version: 0.1.1
 
 environment:
   sdk: '>=2.13.0 <3.0.0'
@@ -9,5 +9,5 @@ environment:
 #   path: ^1.8.0
 
 dev_dependencies:
-  pedantic: ^1.10.0
   test: ^1.16.0
+  lints:
