--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -1,12 +1,14 @@
 name: cv
 description: Content Values map helpers
 version: 0.1.1
+homepage: https://github.com/tekartik/cv.dart/tree/main/packages/cv
 
 environment:
   sdk: '>=2.13.0 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  collection: '>=1.0.0 <3.0.0'
+  meta: '>=1.7.0 <3.0.0'
 
 dev_dependencies:
   test: ^1.16.0
