--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cv
-description: Content Values map helpers
-version: 0.1.1
+description: Content Values map to/from object helpers
+version: 0.1.1+2
 homepage: https://github.com/tekartik/cv.dart/tree/main/packages/cv
 
 environment:
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   collection: '>=1.0.0 <3.0.0'
-  meta: '>=1.7.0 <3.0.0'
+  meta: '>=1.3.0 <3.0.0'
 
 dev_dependencies:
   test: ^1.16.0
