--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -7,15 +7,12 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  chrome_travis:
-    git:
-      url: git://github.com/tekartik/chrome_travis.dart
-      ref: null_safety
   process_run: '>=0.10.0'
 
 dev_dependencies:
   test: '>=1.0.0'
   dev_test: '>=0.13.4-dev.1'
+  lints:
 
 dependency_overrides:
 #  tekartik_build_utils:
