--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
 
 dev_dependencies:
   test: '>=1.0.0'
-  dev_test: '>=0.13.4-dev.1'
+  dev_test: '>=0.15.5-1'
   lints:
 dependency_overrides:
 #  tekartik_build_utils:
