--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -1,10 +1,10 @@
 name: cv
 description: Content Values map helpers. Define objects that can be converted to/from maps.
-version: 0.2.8+1
+version: 0.2.9-1
 homepage: https://github.com/tekartik/cv.dart/tree/main/packages/cv
 
 environment:
-  sdk: '>=2.16.0 <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
   collection: '>=1.0.0 <3.0.0'
