--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,18 @@
 # See https://docs.github.com/en/code-security/dependabot/dependabot-version-updates
 version: 2
 
+enable-beta-ecosystems: true
 updates:
+  - package-ecosystem: "pub"
+    directory: "packages/cv"
+    schedule:
+      interval: "monthly"
+
+  - package-ecosystem: "pub"
+    directory: "repo_support"
+    schedule:
+      interval: "monthly"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
