--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -3,6 +3,9 @@ description: Content Values map helpers. Define objects that can be converted to
 version: 0.2.13
 homepage: https://github.com/tekartik/cv.dart/tree/main/packages/cv
 
+topics:
+  - json
+
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
@@ -11,5 +14,5 @@ dependencies:
   meta: '>=1.3.0 <3.0.0'
 
 dev_dependencies:
-  test: ^1.16.0
-  lints:
+  test: '>=1.16.0'
+  lints: '>=2.1.1'
