--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -12,7 +12,7 @@ environment:
 dependencies:
   collection: '>=1.0.0 <3.0.0'
   meta: '>=1.3.0 <3.0.0'
-
+  matcher: '>=0.12.0 <2.0.0'
 dev_dependencies:
   test: '>=1.16.0'
   lints: '>=2.1.1'
