--- a/.github/workflows/run_ci_downgrade_analyze.yml
+++ b/.github/workflows/run_ci_downgrade_analyze.yml
@@ -16,8 +16,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-        dart: [stable]
+        include:
+          - os: ubuntu-latest
+            dart: stable
     steps:
       - uses: actions/checkout@v3
       - uses: dart-lang/setup-dart@v1.4
