--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
 dev_dependencies:
   path:
   test: '>=1.0.0'
-  dev_test: '>=0.15.5-1'
+  dev_build: '>=0.15.5-1'
   lints: '>=2.1.1'
 dependency_overrides:
 #  tekartik_build_utils:
