--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -1,13 +1,13 @@
 name: cv
 description: Content Values map helpers. Define objects that can be converted to/from maps.
-version: 0.2.20+1
+version: 1.0.0
 homepage: https://github.com/tekartik/cv.dart/tree/main/packages/cv
 
 topics:
   - json
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.4.0
 
 dependencies:
   collection: '>=1.0.0 <3.0.0'
