--- a/packages/cv/analysis_options.yaml
+++ b/packages/cv/analysis_options.yaml
@@ -1,17 +1,4 @@
-# Defines a default set of lint rules enforced for
-# projects at Google. For details and rationale,
-# see https://github.com/dart-lang/pedantic#enabled-lints.
 include: package:lints/recommended.yaml
-
-# Until there are meta linter rules, each desired lint must be explicitly enabled.
-# See: https://github.com/dart-lang/linter/issues/288
-#
-# For a list of lints, see: http://dart-lang.github.io/linter/lints/
-# See the configuration guide for more
-# https://github.com/dart-lang/sdk/tree/master/pkg/analyzer#configuring-the-analyzer
-#
-# NOTE: Please keep this file in sync with
-# https://github.com/flutter/flutter/blob/master/analysis_options.yaml
 
 analyzer:
   language:
@@ -31,44 +18,30 @@ linter:
   rules:
     - always_declare_return_types
     - avoid_dynamic_calls
-    - avoid_empty_else
     - avoid_print
-    - avoid_relative_lib_imports
-    - avoid_shadowing_type_parameters
     - avoid_slow_async_io
-    - avoid_types_as_parameter_names
-    - await_only_futures
-    - camel_case_extensions
-    - camel_case_types
     - cancel_subscriptions
-    - curly_braces_in_flow_control_structures
-    # - depend_on_referenced_packages
+    - deprecated_member_use_from_same_package
     - directives_ordering
-    - empty_catches
-    - hash_and_equals
-    - collection_methods_unrelated_type
+    - implicit_reopen
+    - invalid_case_patterns
+    - invalid_runtime_check_with_js_interop_types
+    - iterable_contains_unrelated_type
+    - list_remove_unrelated_type
     - no_adjacent_strings_in_list
-    - no_duplicate_case_values
-    - non_constant_identifier_names
+    - no_literal_bool_comparisons
+    - no_self_assignments
     - omit_local_variable_types
     - package_api_docs
     - package_prefixed_library_names
-    - prefer_generic_function_type_aliases
-    - prefer_is_empty
-    - prefer_is_not_empty
-    - prefer_iterable_whereType
+    - prefer_const_constructors
+    - prefer_const_literals_to_create_immutables
+    - prefer_if_elements_to_conditional_expressions
     - prefer_single_quotes
-    - prefer_typing_uninitialized_variables
+    - public_member_api_docs
     - sort_child_properties_last
     - test_types_in_equals
     - throw_in_finally
     - unawaited_futures
-    - unnecessary_null_aware_assignments
     - unnecessary_statements
-    - unrelated_type_equality_checks
     - unsafe_html
-    - use_full_hex_values_for_flutter_colors
-    - valid_regexps
-
-    # === doc rules ===
-    - public_member_api_docs
