--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  pub_semver: '>=1.4.2 <3.0.0'
   collection: '>=1.0.0 <3.0.0'
   meta: '>=1.3.0 <3.0.0'
   matcher: '>=0.12.0 <2.0.0'
