--- a/packages/cv/pubspec.yaml
+++ b/packages/cv/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cv
 description: Content Values map helpers. Define objects that can be converted to/from maps.
-version: 1.1.7
+version: 1.1.8
 homepage: https://github.com/tekartik/cv.dart/tree/main/packages/cv
 
 topics:
@@ -10,10 +10,11 @@ environment:
   sdk: ^3.9.0
 
 dependencies:
-  pub_semver: '>=1.4.2 <3.0.0'
-  collection: '>=1.0.0 <3.0.0'
-  meta: '>=1.3.0 <3.0.0'
-  matcher: '>=0.12.0 <2.0.0'
+  pub_semver: ">=1.4.2 <3.0.0"
+  collection: ">=1.0.0 <3.0.0"
+  meta: ">=1.3.0 <3.0.0"
+  matcher: ">=0.12.0 <2.0.0"
 dev_dependencies:
-  test: '>=1.16.0'
-  lints: '>=2.1.1'
+  test: ">=1.16.0"
+  lints: ">=2.1.1"
+  yaml: ">=3.1.3"
