--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
 
 dev_dependencies:
   path:
-  test: '>=1.0.0'
+  test: ">=1.26.3"
   dev_build: '>=0.15.5-1'
   lints: '>=2.1.1'
 dependency_overrides:
-#  tekartik_build_utils:
-#    path: ../../../tekartik/build_utils.dart
+  cv:
+    path: ../packages/cv
